[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-launchpad"
version = "0.1.0"
description = "FastAPI and CLI codebase scanner for recruiter-ready portfolios"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Browser Use Agent"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = ["fastapi==0.115.0", "uvicorn[standard]==0.30.6", "pydantic==2.8.2"]

[project.optional-dependencies]
test = ["pytest==8.3.2", "httpx==0.27.2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
